Поправил размер логотипа, настроил модалку

--- a/images/style.less
+++ b/images/style.less
@@ -1,8 +1,8 @@
-@color1: #ed1c24;
-@color2: #aa0136;
-@color3: #39b54a;
-@color4: #f20000;
-@color5: #820029;
+@color1: #00553e;
+@color2: #130e1f;
+@color3: #be202e;
+@color4: #be202e;
+@color5: #00553e;
 
 @font-face {
   font-display: swap;
@@ -5743,7 +5743,7 @@ i.rub {
 }
 
 .bg-wt {
-  background: #ed1c24;
+  background: @color1;
   color: #fff;
   padding: 30px 20px;
   font-size: 38px;
@@ -5754,7 +5754,7 @@ i.rub {
   margin: 0 auto;
 }
 .bg-wt-pickup {
-  background: #ed1c24;
+  background: @color1;
   color: #fff;
   padding: 20px 15px;
   font-size: 26px;
@@ -10503,7 +10503,7 @@ input.size-input-file{
   }
 
   .hm-logo-mobile img {
-    height: 45px;
+    height: 40px;
   }
 }
 @media (max-width: 290px) {
@@ -10529,7 +10529,7 @@ input.size-input-file{
   }
 
   .hm-logo-mobile img {
-    height: 40px;
+    height: 35px;
   }
   .cho-receipt {
     margin-bottom: 45px;
