--- a/images/style.less
+++ b/images/style.less
@@ -495,7 +495,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .flexmenu_runed{
   display:-webkit-box;display:-ms-flexbox;display:flex;
-  -webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;
+  -webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start;
 }
 
 .menu li {
@@ -7527,6 +7527,12 @@ input.size-input-file{
 .rev-sites div {
   width: 770px !important;
   margin: 0 auto;
+}
+.short-text p {
+  font-size: 14px;
+  text-align: justify;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 /* display:-webkit-box;display:-ms-flexbox;display:flex; */
