Изменил цвет title на всплывающей окне (подарок за подписку)

--- a/images/style.less
+++ b/images/style.less
@@ -1,7 +1,7 @@
 @color1: #00553e;
 @color2: #130e1f;
-@color3: #be202e;
-@color4: #be202e;
+@color3: #f58813;
+@color4: #f58813;
 @color5: #00553e;
 
 @font-face {
@@ -5897,7 +5897,7 @@ i.rub {
   display:block;
   font-size: 54px;
   line-height: 58px;
-  color:#ed1c24;
+  color:@color1;
   text-transform:uppercase;
 }
 .tbm-h1 i{
